--- a/tables/randoopvsBeapi.tex
+++ b/tables/randoopvsBeapi.tex
@@ -100,12 +100,12 @@
 40	&	Randoop	&		&		&	4284	&	9	&	31	&	58	\\
 	&	R-Serialize	&	21260	&	2566	&	1934660	&	5	&	119	&	100	\\
 	&	R-Builders	&	33460	&	1141	&	3044860	&	4	&	162	&	152	\\
-	&	BEAPI	&	1098397	&		&	3119116	&	15	&	179	&	140	\\
+	&	BEAPI	&	34276	&		&	3119116	&	15	&	179	&	140	\\
  \cline{2-8}															
 150	&	Randoop	&		&		&	15902	&	21	&	46	&	58	\\
 	&	R-Serialize	&	69747	&	8181	&	6346977	&	7	&	120	&	100	\\
 	&	R-Builders	&	68373	&	1645	&	6221943	&	5	&	162	&	152	\\
-	&	BEAPI	&		&		&	3119116	&	15	&	173	&	140	\\
+	&	BEAPI	&34276&		&	3119116	&	15	&	179	&	140	\\
 \midrule
 \end{tabular}
 \caption{Comparativa de diferentes tecnicas en TreeMap}
@@ -158,28 +158,28 @@
   \midrule
 5	&	Randoop	&		&	-	&	78	&	2	&	48	&	66	\\
 	&	R-Serialize	&	3290	&	348	&	649448	&	9	&	95	&	118	\\
-	&	R-Builders	&	4222	&	?	&	856088	&	15	&	119	&	127	\\
-	&	BEAPI	&	1203	&	?	&	246623	&	4	&	102	&	119	 \\
+	&	R-Builders	&	4222	& 908		&	856088	&	15	&	119	&	127	\\
+	&	BEAPI	&	1203	&	-	&	246623	&	4	&	102	&	119	 \\
  \cline{2-8}															
 10	&	Randoop	&		&	-	&	80	&	3	&	48	&	66	\\
 	&	R-Serialize	&	6317	&	686	&	1285563	&	17	&	104	&	120	\\
-	&	R-Builders	&	5666	&	?	&	1158668	&	19	&	119	&	127	\\
-	&	BEAPI	&	10453	&	?	&	2142873	&	9	&	102	&	120	\\
+	&	R-Builders	&	5666	&	1218	&	1158668	&	19	&	119	&	127	\\
+	&	BEAPI	&	10453	&	-	&	2142873	&	9	&	122	&	120	\\
  \cline{2-8}															
 20	&	Randoop	&	-	&	-	&	82	&	3	&	48	&	66	\\
 	&	R-Serialize	&	11762	&	1200	&	2415318	&	26	&	104	&	120	\\
-	&	R-Builders	&	7249	&	?	&	1483798	&	24	&	119	&	127	\\
-	&	BEAPI	&	10453	&	?	&	2142873	&	9	&	102	&	120	 \\
+	&	R-Builders	&	7249	&	1559	&	1483798	&	24	&	119	&	127	\\
+	&	BEAPI	&	10453	&	-	&	2142873	&	9	&	122	&	120	 \\
  \cline{2-8}															
 40	&	Randoop	&	-	&	-	&	90	&	3	&	48	&	66	\\
 	&	R-Serialize	&	22284	&	2042	&	4557158	&	46	&	104	&	120	\\
-	&	R-Builders	&	9318	&	?	&	1909583	&	30	&	119	&	127	\\
-	&	BEAPI	&	10453	&	?	&	2142873	&	9	&	122	&	120	\\ 
+	&	R-Builders	&	9318	& 2003	&	1909583	&	30	&	119	&	127	\\
+	&	BEAPI	&	10453	&	-	&	2142873	&	9	&	122	&	120	\\ 
  \cline{2-8}															
 150	&	Randoop	&	-	&	-	&	108	&	3	&	48	&	67	\\
 	&	R-Serialize	&	76581	&	5590	&	15567913	&	149	&	110	&	120	\\
-	&	R-Builders	&	14542	&	?	&	2962873	&	46	&	119	&	128	\\
-	&	BEAPI	&	10453	&	?	&	2142873	&	9	&	122	&	120		\\
+	&	R-Builders	&	14542	&	3127	&	2962873	&	46	&	119	&	128	\\
+	&	BEAPI	&	10453	&	-	&	2142873	&	9	&	122	&	120		\\
 \midrule
 \end{tabular}
 \caption{Comparativa de diferentes tecnicas en HashMap}
