--- a/builders.tex
+++ b/builders.tex
@@ -1443,7 +1443,7 @@ cada sucesor y selecciona aquel que tenga el mayor valor (líneas 30 a 38).
 En la Sección \ref{sec:jpf}, mostramos que para la verificación acotada de
 propiedades para estructuras dinámicas complejas el usuario debe proveer un
 \emph{driver} para genere las estructuras (de manera exhaustiva acotada). 
-
+\\
 \begin{lstlisting}[language=Java,caption={Driver usando todos los métodos
 de la API},label={lst:driverAPI},captionpos=b]
     private static TreeMap generateStructure(int scope) {
@@ -1506,8 +1506,8 @@ exhaustiva acotada con ambos drivers. Sin embargo, como
 se muestra en la sección experimental (\ref{sec:experiments-jpf-driver}), 
 eliminar métodos innecesarios del driver produce ganancias significativas en tiempo y 
 escalabilidad respecto del scope, para la verificación de propiedades.
-
-\begin{lstlisting}[language=Java,caption={Controlador con los métodos generadores de objetos},label={lst:driverBLD},captionpos=b]
+\\
+\begin{lstlisting}[language=Java,caption={Driver con los métodos generadores de objetos},label={lst:driverBLD},captionpos=b]
     private static TreeMap generateStructure(int scope) {
        int maxLength = Verify.getInt(0, scope);
        TreeMap t = new TreeMap();
@@ -1535,31 +1535,3 @@ conjunto de métodos, genera automáticamente los drivers para la creación de
 estructuras usando los métodos dados (la API completa, o los métodos generadores
 de objetos identificados por los algoritmos propuestos). 
 
-
-
-
-
-% Si bien evitar este crecimiento exponencial no es posible en muchos casos, en este trabajo se propone utilizar sólo los métodos generadores detectados por el algoritmo
-% genético explicado anteriormente para construir drivers, para acelerar la verificación de propiedades en JPF y mejorar su escalabilidad en casos que ocurren
-% típicamente en la práctica (como el caso de NodeCachingLinkedList presentado aquí). Como se muestra en la figura Figura~\ref{fig:NCLbuilders}, sólo 3 métodos conforman un conjunto
-% suficiente y minimal para la construcción de drivers para NodeCachingLinkedList. Utilizando sólo esos métodos, obtenemos el driver del algoritmo \ref{driverNCLBuilders}, que
-% genera exactamente los mismos objetos de NodeCachingLinkedList que el anterior (porque los métodos generadores son suficientes y minimales), y por lo tanto JPF explora
-% las mismas ejecuciones de la propiedad con ambos drivers. Sin embargo, como
-% se discute en la sección experimental (\ref{sec:experimentalJPF}) eliminar métodos innecesarios del driver produce ganancias sustanciales en tiempo y escalabilidad en el análisis de nuestra
-% propiedad de ejemplo usando JPF.
-% \begin{lstlisting}[language=Java,caption={Controlador con métodos generadores},label={driverNCLBuilders},captionpos=b]
-%     private static  NCL generateStructure(int scope) {
-%        int maxLength = Verify.getInt(0, scope);
-%        NCL t = new NCL();
-%        for (int i = 1; i <= maxLength; i++) {
-%           switch (Verify.random(3)) {
-%              case 0:
-%                 t.addFirst(Verify.getInt(0,scope),Verify.getInt(0,scope));
-%                 break;
-%              case 1:
-%                 t.removeFirst(Verify.getInt(0,scope));
-%                 break;						
-%           }
-%        }
-%        return t;
-%     }
